--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -15,13 +15,19 @@
         <img href="/static/toka gym.jpg" rel="toka gym">
 
 
-        ToKa Fitness is dance-like exercise.
+        ToKa Fitness is dance-like exercise where you will copy an instructor in various activities.
 
         This fitness guarentees that you will hit your fitness goals while having fun at the same time.
 
 
 
     </body>
+
+
+
+    <p></p>
+    <p></p>
+    <p></p>
 
     <form
     action="/logout"
