--- a/templates/reset.html
+++ b/templates/reset.html
@@ -14,7 +14,7 @@
     <body class="screen-center">
         
         <h1>Your Password Needs Resetting</h1>
-        <h3>Please enter your username witht your current password.</h3> 
+        <h3>Please enter your username with your current password.</h3> 
 
         <p></p>
 
@@ -41,6 +41,11 @@
 
 
     </body>
+
+
+    <p></p>
+    <p></p>
+    <p></p>
 
 
 </html>
