--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -10,14 +10,14 @@
 
     </head>
 
-    <body>
+    <body class="screen-center">
 
-        <img href="/static/toka gym.jpg" rel="toka gym">
+        <img src="/static/toka gym.jpg" rel="toka gym">
 
 
-        ToKa Fitness is dance-like exercise where you will copy an instructor in various activities.
+        <h2>ToKa Fitness is dance-like exercise where you will copy an instructor in various activities.</h2>
 
-        This fitness guarentees that you will hit your fitness goals while having fun at the same time.
+        <h2>This fitness guarentees that you will hit your fitness goals while having fun at the same time.</h2>
 
 
 
