--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -10,7 +9,7 @@
 
 <body class="screen-center">
 
-    <img href="/static/toka logo.jpg" rel="toka logo">
+    <img src="/static/toka logo.jpg" rel="toka logo">
 
     <div style="display: flex;">
         <form 
