Updated html pages

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body style="text-align: center;">
 
         {% for user in users %} <!--A loop used to extract all values in a database-->
         <br>
@@ -61,6 +61,11 @@
 
                 <button style="font-size: 30px;" type="submit">Deactivate</button>
 
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+
             </td> 
         </tr> 
 
@@ -78,6 +83,8 @@
 
 
     <button style="font-size: 30px;" type="submit">Back To Log In Page</button>
+
+    </form>
 
     </form>
     </html>
