--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,7 @@
         <p></p>
         <p></p>
 
-        <button style="font-size: 30px;" type="submit">Update</button>
+        <button style="font-size: 30px; text-align: center;" type="submit">Update</button>
         
         </form>
 
