--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -19,6 +19,8 @@
 
         <h2>This fitness guarentees that you will hit your fitness goals while having fun at the same time.</h2>
 
+        <h2>ToKa fitness consits if various exercises that can help buils stamina, lose weight, and help gain muscle.</h2>
+
 
 
     </body>
