Updates and fixes

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -61,6 +61,8 @@
 
                 <button style="font-size: 30px;" type="submit">Deactivate</button>
 
+                </form>
+
                 <p></p>
                 <p></p>
                 <p></p>
