--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -15,11 +15,13 @@
         <img src="/static/toka gym.jpg" rel="toka gym">
 
 
-        <h2>ToKa Fitness is dance-like exercise where you will copy an instructor in various activities.</h2>
+        <h2>ToKa Fitness is dance-like exercise where you will copy an instructor in various exercises.</h2>
 
-        <h2>This fitness guarentees that you will hit your fitness goals while having fun at the same time.</h2>
+        <h2>This fitness is fast-paced and encourages vigourous cardio exercises.</h2>
 
         <h2>ToKa fitness consits if various exercises that can help buils stamina, lose weight, and help gain muscle.</h2>
+
+        <h2>ToKa fitness can be attened both in person, and online at home.</h2>
 
 
 
@@ -32,11 +34,11 @@
     <p></p>
 
     <form
-    action="/logout"
-    name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
+    action="/home"
+    name="home"> <!--This is a form that is used to take a user back to the home page-->
 
 
-    <button style="font-size: 30px;" type="submit">Log Out</button>
+    <button style="font-size: 30px;" type="submit">GO Back</button>
 
     </form>
 
