--- a/templates/reset.html
+++ b/templates/reset.html
@@ -27,7 +27,7 @@
     name="reset">
     
     <input style="font-size: 35px;" type="text" name="Username" placeholder="Username" autofocus autocomplete="off"> <!--Used to collect a username-->
-    <input style="font-size: 35px;" type="text" name="Current " placeholder="Current Password" autofocus autocomplete="off"> <!--Used to collect a user's old password, to make sure they do not reset the wrong account-->
+    <input style="font-size: 35px;" type="password" name="Current " placeholder="Current Password" autofocus autocomplete="off"> <!--Used to collect a user's old password, to make sure they do not reset the wrong account-->
 
     <input style="font-size: 35px;" type="password" name="Password" placeholder="New Password" autofocus autocomplete="off"> <!--Used to collect a new password-->
     
