--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -38,7 +38,7 @@
     name="home"> <!--This is a form that is used to take a user back to the home page-->
 
 
-    <button style="font-size: 30px;" type="submit">GO Back</button>
+    <button style="font-size: 30px;" type="submit">Go Back</button>
 
     </form>
 
