--- a/templates/index.html
+++ b/templates/index.html
@@ -37,38 +37,39 @@
 
 
 
-    <div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
-        <form class="card" action="/register" method="post" name="register">
-
-            <span>Register</span>
-
-            <input type="text" name="Name" placeholder="Name" autofocus autocomplete="off">
-            <input type="email" name="Email" placeholder="Email" autofocus autocomplete="off">
-
-            <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
-            <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
-
-            <button type="submit">Register</button>
-        </form>
-
-
-
-        <p>Already registered? Login ➔</p>
-
-
-
         <form class="card" action="/home" method="post" name="login">
             <span>Login</span>
-
+        
             <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
             <!--Used to collect a username-->
-
+        
             <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
             <!--Used to collect a password-->
-
+        
             <button type="submit">Login</button>
         </form>
     </div>
+
+
+
+        <p>Don't have an account? Register now! ➔</p>
+
+
+
+
+        <div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
+            <form class="card" action="/register" method="post" name="register">
+    
+                <span>Register</span>
+    
+                <input type="text" name="Name" placeholder="Name" autofocus autocomplete="off">
+                <input type="email" name="Email" placeholder="Email" autofocus autocomplete="off">
+    
+                <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
+                <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
+    
+                <button type="submit">Register</button>
+            </form>
 
 
     
