--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,8 @@
 
 
 
-        <p>Don't have an account? Register now! ➔</p>
+        <p>Don't have an account?</p>
+        <p>Register now! ➔</p>
 
 
 
