added background image

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
-<body class="screen-center">
-
-    <img src="/static/toka logo.jpg" rel="toka logo">
+<body class="screen-center" style="background-image: url(/static/background.jpg); background-repeat:no-repeat; background-size: contain; background-color: rgb(187, 187, 187);">
 
     <div style="display: flex;">
         <form 
