--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,10 @@
 
 <body class="screen-center" style="background-image: url(/static/background.jpg); background-repeat:no-repeat; background-size: contain; background-color: rgb(187, 187, 187);">
 
+    <h1 style="text-decoration: solid; color:white; font-size: 100px;">Home Page</h1>
+
+    <div class="quote">TODAY'S ACTIONS ARE TOMORROW RESULTS</div>
+
     <div style="display: flex;">
         <form 
         action="/aboutus"> <!--This will take the user to the About Us page-->
@@ -29,7 +33,7 @@
     <!--A form that is used to gather a username and password from a user-->
     <div style="display: flex; margin-bottom: 10px; flex-direction: column; align-items: center;">
         <h3>
-            You must be logged in to continue!
+            <p style="font-size: 20px;">You must be logged in to continue!</p>
         </h3>
     </div>
 
@@ -50,8 +54,8 @@
 
 
 
-        <p>Don't have an account?</p>
-        <p>Register now! ➔</p>
+        <p style="font-size: 20px;">Don't have an account?</p>
+        <p style="font-size: 20px;">Register now! ➔</p>
 
 
 
