Changed quote colour

--- a/static/styles.css
+++ b/static/styles.css
@@ -57,7 +57,7 @@ button:hover {
 
 .quote {
     text-decoration: solid; 
-    color:green; 
+    color:lime; 
     font-size: 50px;
     position: absolute;
     top:0;
