--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
     <h1 style="text-decoration: solid; color:white; font-size: 100px;">Home Page</h1>
 
-    <div class="quote">TODAY'S ACTIONS ARE TOMORROW RESULTS</div>
+    <div class="quote">TODAY'S ACTIONS ARE TOMORROWS RESULTS</div>
 
     <div style="display: flex;">
         <form 
