changed backgound colour

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
-<body class="screen-center">
+<body class="screen-center" style="background-color: rgb(187, 187, 187);">
     <div
         style="padding-left: 50px; padding-right: 50px; display: flex; flex-direction: column; align-items: center; text-align: center;">
         <h1>
