--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body style="text-align: center;">
+    <body style="text-align: center; background-color: rgb(187, 187, 187);">
 
         {% for user in users %} <!--A loop used to extract all values in a database-->
         <br>
