--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
         <h2 style="text-align: center;">Success, your details have been added/updated to the database.</h2>
 
