--- a/templates/inactive.html
+++ b/templates/inactive.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
         <h2 style="text-align: center;">This account is currently inactive.</h2> <!--Used as an error statement-->
         <h1 style="text-align: center;">Please seek Administrator to reactivate this account.</h1>
