--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
         <img src="/static/toka gym.jpg" rel="toka gym">
 
