--- a/templates/reset.html
+++ b/templates/reset.html
@@ -11,7 +11,7 @@
     </head>
 
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
         
         <h1>Your Password Needs Resetting</h1>
         <h3>Please enter your username with your current password.</h3> 
