--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
       
         <h1 style="font-size: 40px;">Contact Us page</h1>
