--- a/templates/failure.html
+++ b/templates/failure.html
@@ -12,7 +12,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
 
         <img src="/static/wrong.jpg" style="background-repeat: no-repeat;background-position: center;">
