--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
     <div style="display: flex;">
         <form 
