--- a/templates/locked.html
+++ b/templates/locked.html
@@ -12,7 +12,7 @@
 
     </head>
 
-    <body class="screen-center">
+    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
         <h2 style="text-align: center;">This account is locked due to too many failed login attemps.</h2> <!--Used as an error statement-->
         <h1 style="text-align: center;">Please seek Administrator to remove this lock, and/or to reset your password.</h1>
