--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -26,28 +26,28 @@
 
         <h2>Healthy Eating:</h2>
 
-        <p>Starchy carbohydrates should make up just over a third of the food you eat. They include potatoes, bread, rice, pasta and cereals.
-            Choose higher fibre or wholegrain varieties, such as wholewheat pasta, brown rice or potatoes with their skins on.
-            They contain more fibre than white or refined starchy carbohydrates and can help you feel full for longer.
-            Try to include at least 1 starchy food with each main meal. Some people think starchy foods are fattening, but gram for gram the carbohydrate they contain provides fewer than half the calories of fat.
-            Keep an eye on the fats you add when you're cooking or serving these types of foods because that's what increases the calorie content - for example, oil on chips, butter on bread and creamy sauces on pasta.</p>
+        <p>Starchy carbohydrates should make up just over a third of the food you eat. They include potatoes, bread, rice, pasta and cereals.</p>
+        <p>Choose higher fibre or wholegrain varieties, such as wholewheat pasta, brown rice or potatoes with their skins on.</p>
+        <p>They contain more fibre than white or refined starchy carbohydrates and can help you feel full for longer.</p>
+        <p>Try to include at least 1 starchy food with each main meal. Some people think starchy foods are fattening, but gram for gram the carbohydrate they contain provides fewer than half the calories of fat.</p>
+        <p>Keep an eye on the fats you add when you're cooking or serving these types of foods because that's what increases the calorie content - for example, oil on chips, butter on bread and creamy sauces on pasta.</p>
 
             <p></p>
             <p></p>
             <p></p>
 
-        <p>It's recommended that you eat at least 5 portions of a variety of fruit and veg every day. They can be fresh, frozen, canned, dried or juiced.
-            Getting your 5 A Day is easier than it sounds. Why not chop a banana over your breakfast cereal, or swap your usual mid-morning snack for a piece of fresh fruit?
-            A portion of fresh, canned or frozen fruit and vegetables is 80g. A portion of dried fruit (which should be kept to mealtimes) is 30g.
-            A 150ml glass of fruit juice, vegetable juice or smoothie also counts as 1 portion, but limit the amount you have to no more than 1 glass a day as these drinks are sugary and can damage your teeth.</p>
+        <p>It's recommended that you eat at least 5 portions of a variety of fruit and veg every day. They can be fresh, frozen, canned, dried or juiced.</p>
+        <p>Getting your 5 A Day is easier than it sounds. Why not chop a banana over your breakfast cereal, or swap your usual mid-morning snack for a piece of fresh fruit?</p>
+        <p>A portion of fresh, canned or frozen fruit and vegetables is 80g. A portion of dried fruit (which should be kept to mealtimes) is 30g.</p>
+        <p>A 150ml glass of fruit juice, vegetable juice or smoothie also counts as 1 portion, but limit the amount you have to no more than 1 glass a day as these drinks are sugary and can damage your teeth.</p>
 
             <p></p>
             <p></p>
             <p></p>
 
-        <p>Fish is a good source of protein and contains many vitamins and minerals.
-            Aim to eat at least 2 portions of fish a week, including at least 1 portion of oily fish.
-            Oily fish are high in omega-3 fats, which may help prevent heart disease.</p>
+        <p>Fish is a good source of protein and contains many vitamins and minerals.</p>
+        <p>Aim to eat at least 2 portions of fish a week, including at least 1 portion of oily fish.</p>
+        <p>Oily fish are high in omega-3 fats, which may help prevent heart disease.</p>
 
             <p>Oily fish include:</p>
 
@@ -62,33 +62,19 @@
             <p></p>
             <p></p>
 
-            <p>You need some fat in your diet, but it's important to pay attention to the amount and type of fat you're eating.
-                There are 2 main types of fat: saturated and unsaturated. Too much saturated fat can increase the amount of cholesterol in the blood, which increases your risk of developing heart disease.
-                On average, men should have no more than 30g of saturated fat a day. On average, women should have no more than 20g of saturated fat a day.</p>
+            <p>You need some fat in your diet, but it's important to pay attention to the amount and type of fat you're eating.</p>
+            <p>There are 2 main types of fat: saturated and unsaturated. Too much saturated fat can increase the amount of cholesterol in the blood, which increases your risk of developing heart disease.</p>
+            <p>On average, men should have no more than 30g of saturated fat a day. On average, women should have no more than 20g of saturated fat a day.</p>
 
 
             <p></p>
             <p></p>
             <p></p>
 
-        <p>Eating too much salt can raise your blood pressure. People with high blood pressure are more likely to develop heart disease or have a stroke.
-                Even if you do not add salt to your food, you may still be eating too much.
-                About three-quarters of the salt you eat is already in the food when you buy it, such as breakfast cereals, soups, breads and sauces.
-                Use food labels to help you cut down. More than 1.5g of salt per 100g means the food is high in salt.</p>
-
-
-            <p></p>
-            <p></p>
-            <p></p>
-
-
-
-        <p>You need to drink plenty of fluids to stop you getting dehydrated. The government recommends drinking 6 to 8 glasses every day. This is in addition to the fluid you get from the food you eat.
-            All non-alcoholic drinks count, but water, lower fat milk and lower sugar drinks, including tea and coffee, are healthier choices. 
-            Try to avoid sugary soft and fizzy drinks, as they're high in calories. They're also bad for your teeth. 
-            Even unsweetened fruit juice and smoothies are high in free sugar.
-            Your combined total of drinks from fruit juice, vegetable juice and smoothies should not be more than 150ml a day, which is a small glass.
-            Remember to drink more fluids during hot weather or while exercising.</p>
+        <p>Eating too much salt can raise your blood pressure. People with high blood pressure are more likely to develop heart disease or have a stroke.</p>
+        <p>Even if you do not add salt to your food, you may still be eating too much.</p>
+        <p>About three-quarters of the salt you eat is already in the food when you buy it, such as breakfast cereals, soups, breads and sauces.</p>
+        <p>Use food labels to help you cut down. More than 1.5g of salt per 100g means the food is high in salt.</p>
 
 
             <p></p>
@@ -96,9 +82,24 @@
             <p></p>
 
 
-        <p>Some people skip breakfast because they think it'll help them lose weight.
-            But a healthy breakfast high in fibre and low in fat, sugar and salt can form part of a balanced diet, and can help you get the nutrients you need for good health.
-            A wholegrain lower sugar cereal with semi-skimmed milk and fruit sliced over the top is a tasty and healthier breakfast.</p>
+
+        <p>You need to drink plenty of fluids to stop you getting dehydrated. The government recommends drinking 6 to 8 glasses every day.</p>
+        <p>This is in addition to the fluid you get from the food you eat.</p>
+        <p>All non-alcoholic drinks count, but water, lower fat milk and lower sugar drinks, including tea and coffee, are healthier choices.</p> 
+        <p>Try to avoid sugary soft and fizzy drinks, as they're high in calories. They're also bad for your teeth. </p>
+        <p>Even unsweetened fruit juice and smoothies are high in free sugar.</p>
+        <p>Your combined total of drinks from fruit juice, vegetable juice and smoothies should not be more than 150ml a day, which is a small glass.</p>
+        <p>Remember to drink more fluids during hot weather or while exercising.</p>
+
+
+            <p></p>
+            <p></p>
+            <p></p>
+
+
+        <p>Some people skip breakfast because they think it'll help them lose weight.</p>
+        <p>But a healthy breakfast high in fibre and low in fat, sugar and salt can form part of a balanced diet, and can help you get the nutrients you need for good health.</p>
+        <p>A wholegrain lower sugar cereal with semi-skimmed milk and fruit sliced over the top is a tasty and healthier breakfast.</p>
 
 
 
