--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body class="screen-center" style="background-image: url(/static/background.jpg); background-repeat:no-repeat; background-size: contain; background-color: rgb(187, 187, 187); font-size: 50px;">
 
-    <h1 style="text-decoration: solid; color:white; font-size: 100px;">Home Page</h1>
+    <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: black;">Home Page</h1>
 
     <div class="quote">TODAY'S ACTIONS ARE TOMORROWS RESULTS</div>
 
@@ -54,8 +54,8 @@
 
 
 
-        <p style="font-size: 20px;">Don't have an account?</p>
-        <p style="font-size: 20px;">Register now! ➔</p>
+        <p style="font-size: 20px; background-color: white;">Don't have an account?</p>
+        <p style="font-size: 20px; background-color: white;">Register now! ➔</p>
 
 
 
