--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,7 @@
     
 
 
-
-        <p style="font-size: 20px; background-color: white;">Don't have an account?</p>
-        <p style="font-size: 20px; background-color: white;">Register now! ➔</p>
+        <p style="font-size: 20px; background-color: white;">Don't have an account? Register now! ➔</p>
 
 
 
