--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,17 @@
         </div>
 
 
+        <form
+        action="/accessibility"
+        name="accessibility"
+        method="post">
+    
+    
+        <button class="access button" type="submit">Accessibility</button>
+    
+    
+    
+        </form>
     
 </body>
 
