--- a/static/styles.css
+++ b/static/styles.css
@@ -66,7 +66,6 @@ button:hover {
 }
 
 .access button {
-    text-align: center;
     padding: 10px 20px;
     border: 0;
     background: darkgray;
@@ -74,5 +73,6 @@ button:hover {
     border-radius: 10px;
     cursor: pointer;
     bottom: 0;
-    right:0
+    right:0;
+    font-size: 45px;
 }
