--- a/templates/index.html
+++ b/templates/index.html
@@ -72,18 +72,20 @@
             </form>
         </div>
 
-
+    
+        
+    <div class="access button">
         <form
         action="/accessibility"
         name="accessibility"
         method="post">
     
     
-        <button class="access button" type="submit">Accessibility</button>
-    
-    
+        <button type="submit">Accessibility</button>
     
         </form>
+
+    </div>
     
 </body>
 
