--- a/static/styles.css
+++ b/static/styles.css
@@ -72,7 +72,8 @@ button:hover {
     color: aqua;
     border-radius: 10px;
     cursor: pointer;
-    bottom: 0;
-    right:0;
+    bottom: 20px;
+    right:20px;
     font-size: 45px;
+    position: absolute;
 }
