--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -48,7 +48,7 @@
         <p></p>
         <p></p>
         <p></p>
-        
+
         
         <button type="submit">Confirm Choice</button>
     
@@ -68,7 +68,7 @@
     name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-    <button style="font-size: 30px;" type="submit">Log Out</button>
+    <button style="font-size: 30px;" type="submit">Go Back</button>
 
     </form>
 
