fixing accessibility button

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,14 @@
     <div style="display: flex;">
         <form 
         action="/aboutus"> <!--This will take the user to the About Us page-->
-        <button style="font-size: 30px;" type="submit">About Us</button>
+        <button class="button" style="font-size: 30px;" type="submit">About Us</button>
 
         </form>
 
 
         <form
         action="/contactus"> <!--This will take the user ot the Contact Us page-->
-        <button style="font-size: 30px;" type="submit">Contact Us</button>    
+        <button class="button" style="font-size: 30px;" type="submit">Contact Us</button>    
     
         </form>
         </div>
@@ -48,7 +48,7 @@
             <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
             <!--Used to collect a password-->
         
-            <button type="submit">Login</button>
+            <button class="button" type="submit">Login</button>
         </form>
     
 
@@ -68,25 +68,25 @@
                 <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
                 <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
     
-                <button type="submit">Register</button>
+                <button class="button" type="submit">Register</button>
             </form>
         </div>
 
     
+</body>
+
+<div class="access button">
+
+    <form
+    action="/accessibility">
+
+    
         
-    <div class="access button">
-        <form
-        action="/accessibility"
-        name="accessibility"
-        method="post">
-    
-    
         <button type="submit">Accessibility</button>
     
-        </form>
+
+    </form>
 
     </div>
-    
-</body>
 
 </html>
