Updated main content

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 
     <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: black;">Home Page</h1>
 
-    <div class="quote">TODAY'S ACTIONS ARE TOMORROWS RESULTS</div>
+    <div class="quote">TODAY'S ACTIONS ARE</div>
+    <div class="quote">TOMORROWS RESULTS</div>
 
     <div style="display: flex;">
         <form 
@@ -80,11 +81,8 @@
     <form
     action="/accessibility">
 
-    
-        
         <button type="submit">Accessibility</button>
     
-
     </form>
 
     </div>
