--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -10,6 +10,8 @@
 
     </head>
 
+
+    <div>
     <body class="screen-center" style="background-color: rgb(187, 187, 187);">
 
         <img src="/static/toka gym.jpg" rel="toka gym">
@@ -19,12 +21,15 @@
         name="home"> <!--This is a form that is used to take a user back to the home page-->
     
     
-        <button style="font-size: 30px;" type="submit">Back To Top Of Page</button>
+        <button style="font-size: 30px;" type="submit">Go Back</button>
     
         </form>
 
 
         <h2>Healthy Eating:</h2>
+
+
+        <h3>Starch</h3>
 
         <p>Starchy carbohydrates should make up just over a third of the food you eat. They include potatoes, bread, rice, pasta and cereals.</p>
         <p>Choose higher fibre or wholegrain varieties, such as wholewheat pasta, brown rice or potatoes with their skins on.</p>
@@ -36,6 +41,8 @@
             <p></p>
             <p></p>
 
+        <h3>Fruit and Vegetables</h3>
+
         <p>It's recommended that you eat at least 5 portions of a variety of fruit and veg every day. They can be fresh, frozen, canned, dried or juiced.</p>
         <p>Getting your 5 A Day is easier than it sounds. Why not chop a banana over your breakfast cereal, or swap your usual mid-morning snack for a piece of fresh fruit?</p>
         <p>A portion of fresh, canned or frozen fruit and vegetables is 80g. A portion of dried fruit (which should be kept to mealtimes) is 30g.</p>
@@ -44,6 +51,8 @@
             <p></p>
             <p></p>
             <p></p>
+
+        <h3>Protein</h3>    
 
         <p>Fish is a good source of protein and contains many vitamins and minerals.</p>
         <p>Aim to eat at least 2 portions of fish a week, including at least 1 portion of oily fish.</p>
@@ -62,6 +71,8 @@
             <p></p>
             <p></p>
 
+            <h3>Fat</h3>
+
             <p>You need some fat in your diet, but it's important to pay attention to the amount and type of fat you're eating.</p>
             <p>There are 2 main types of fat: saturated and unsaturated. Too much saturated fat can increase the amount of cholesterol in the blood, which increases your risk of developing heart disease.</p>
             <p>On average, men should have no more than 30g of saturated fat a day. On average, women should have no more than 20g of saturated fat a day.</p>
@@ -70,6 +81,8 @@
             <p></p>
             <p></p>
             <p></p>
+
+        <h3>Salt</h3>
 
         <p>Eating too much salt can raise your blood pressure. People with high blood pressure are more likely to develop heart disease or have a stroke.</p>
         <p>Even if you do not add salt to your food, you may still be eating too much.</p>
@@ -81,7 +94,7 @@
             <p></p>
             <p></p>
 
-
+        <h3>Water Intake</h3>
 
         <p>You need to drink plenty of fluids to stop you getting dehydrated. The government recommends drinking 6 to 8 glasses every day.</p>
         <p>This is in addition to the fluid you get from the food you eat.</p>
@@ -97,6 +110,8 @@
             <p></p>
 
 
+        <h3>Breakfast</h3>
+
         <p>Some people skip breakfast because they think it'll help them lose weight.</p>
         <p>But a healthy breakfast high in fibre and low in fat, sugar and salt can form part of a balanced diet, and can help you get the nutrients you need for good health.</p>
         <p>A wholegrain lower sugar cereal with semi-skimmed milk and fruit sliced over the top is a tasty and healthier breakfast.</p>
@@ -106,6 +121,8 @@
 
 
     </body>
+
+    </div>
 
 
 
