accessibility button update

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,7 @@
 
     <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: black;">Home Page</h1>
 
-    <div class="quote">TODAY'S ACTIONS ARE</div>
-    <div class="quote">TOMORROWS RESULTS</div>
+    <div class="quote">TODAY'S ACTIONS ARE TOMORROWS RESULTS</div>
 
     <div style="display: flex;">
         <form 
@@ -73,18 +72,19 @@
             </form>
         </div>
 
+
+        
+        <form
+        class="access button"
+        action="/accessibility">
+    
+            <button type="submit">Accessibility</button>
+        
+        </form>
+
     
 </body>
 
-<div class="access button">
 
-    <form
-    action="/accessibility">
-
-        <button type="submit">Accessibility</button>
-    
-    </form>
-
-    </div>
 
 </html>
