Fixed button issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,19 +11,19 @@
 
     <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: black;">Home Page</h1>
 
-    <div class="quote">TODAY'S ACTIONS ARE TOMORROWS RESULTS</div>
+    <div class="quote">TODAY'S ACTIONS ARE <br> TOMORROW'S RESULTS</div>
 
     <div style="display: flex;">
         <form 
         action="/aboutus"> <!--This will take the user to the About Us page-->
-        <button class="button" style="font-size: 30px;" type="submit">About Us</button>
+        <button class="homebutton" style="font-size: 30px;" type="submit">About Us</button>
 
         </form>
 
 
         <form
         action="/contactus"> <!--This will take the user ot the Contact Us page-->
-        <button class="button" style="font-size: 30px;" type="submit">Contact Us</button>    
+        <button class="homebutton" style="font-size: 30px;" type="submit">Contact Us</button>    
     
         </form>
         </div>
@@ -48,7 +48,7 @@
             <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
             <!--Used to collect a password-->
         
-            <button class="button" type="submit">Login</button>
+            <button class="homebutton" type="submit">Login</button>
         </form>
     
 
@@ -68,7 +68,7 @@
                 <input type="text" name="Username" placeholder="Username" autofocus autocomplete="off">
                 <input type="password" name="Password" placeholder="Password" autofocus autocomplete="off">
     
-                <button class="button" type="submit">Register</button>
+                <button class="homebutton" type="submit">Register</button>
             </form>
         </div>
 
