--- a/templates/index.html
+++ b/templates/index.html
@@ -76,12 +76,20 @@
         
         <form
         class="access button"
-        action="/accessibility">
+        action="/accessibility"> <!--This is a form used to take the user to the accessibility page-->
     
             <button type="submit">Accessibility</button>
         
         </form>
 
+        
+        <form
+        class="classes button"
+        action="/classes"> <!--This is a form used to take the user to the classes/schedule page-->
+    
+            <button type="submit">Classes/Schedule</button>
+        
+        </form>
     
 </body>
 
