updated main content

--- a/static/styles.css
+++ b/static/styles.css
@@ -88,3 +88,11 @@ input {
     font-size: 45px;
     position: absolute;
 }
+
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
