--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -12,13 +12,13 @@
 
 
     <div>
-    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
+    <body class="main-content" style="background-color: rgb(187, 187, 187);">
 
         <img src="/static/toka gym.jpg" rel="toka gym">
 
         <form
-        action="/home"
-        name="home"> <!--This is a form that is used to take a user back to the home page-->
+        action="/back"
+        name="back"> <!--This is a form that is used to take a user back to the home page-->
     
     
         <button style="font-size: 30px;" type="submit">Go Back</button>
@@ -26,7 +26,7 @@
         </form>
 
 
-        <h2>Healthy Eating:</h2>
+        <h2>Healthy Eating Advice:</h2>
 
 
         <h3>Starch</h3>
@@ -37,9 +37,7 @@
         <p>Try to include at least 1 starchy food with each main meal. Some people think starchy foods are fattening, but gram for gram the carbohydrate they contain provides fewer than half the calories of fat.</p>
         <p>Keep an eye on the fats you add when you're cooking or serving these types of foods because that's what increases the calorie content - for example, oil on chips, butter on bread and creamy sauces on pasta.</p>
 
-            <p></p>
-            <p></p>
-            <p></p>
+        <br>
 
         <h3>Fruit and Vegetables</h3>
 
@@ -48,9 +46,7 @@
         <p>A portion of fresh, canned or frozen fruit and vegetables is 80g. A portion of dried fruit (which should be kept to mealtimes) is 30g.</p>
         <p>A 150ml glass of fruit juice, vegetable juice or smoothie also counts as 1 portion, but limit the amount you have to no more than 1 glass a day as these drinks are sugary and can damage your teeth.</p>
 
-            <p></p>
-            <p></p>
-            <p></p>
+        <br>
 
         <h3>Protein</h3>    
 
@@ -67,9 +63,7 @@
             <p>- pilchards</p>
             <p>- mackerel</p>
 
-            <p></p>
-            <p></p>
-            <p></p>
+            <br>
 
             <h3>Fat</h3>
 
@@ -78,9 +72,7 @@
             <p>On average, men should have no more than 30g of saturated fat a day. On average, women should have no more than 20g of saturated fat a day.</p>
 
 
-            <p></p>
-            <p></p>
-            <p></p>
+            <br>
 
         <h3>Salt</h3>
 
@@ -90,9 +82,7 @@
         <p>Use food labels to help you cut down. More than 1.5g of salt per 100g means the food is high in salt.</p>
 
 
-            <p></p>
-            <p></p>
-            <p></p>
+        <br>
 
         <h3>Water Intake</h3>
 
@@ -105,9 +95,7 @@
         <p>Remember to drink more fluids during hot weather or while exercising.</p>
 
 
-            <p></p>
-            <p></p>
-            <p></p>
+        <br>
 
 
         <h3>Breakfast</h3>
@@ -118,6 +106,37 @@
 
 
 
+        <br>
+
+
+        <h2>Fitness Training Advice:</h2>
+
+
+        <h3>Aerobic Fitness</h3>
+
+        <p>Aerobic activity, also known as cardio or endurance activity, is the core of most fitness training programs.</p>
+        <p>Aerobic activity or exercise causes you to breathe faster and more deeply. The breathing boosts how much oxygen is in the blood.</p>
+        <p>The heart will beat faster, which sends more blood flow to the muscles and back to the lungs.</p>
+        
+        <p>Aerobic activity includes any physical activity that uses large muscle groups and raises the heart rate, such as:<p>
+
+            <p></p>
+            <p></p>
+
+            <p>- Walking</p>
+            <p>- Jogging</p>
+            <p>- Biking</p>
+            <p>- Swimming</p>
+            <p>- Dancing</p>
+            <p>- Water aerobics</p>
+            <p>- Leaf raking</p>
+            <p>- Snow shoveling</p>
+            <p>- Vacuuming</p>
+
+            <br>
+
+            <p>For most healthy adults, the Department of Health and Human Services recommends at least 150 minutes of moderate</p>
+            <p>aerobic activity or 75 minutes of vigorous aerobic activity a week, or a combination of moderate and vigorous activity.</p>
 
 
     </body>
