added info to main content

--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -139,6 +139,38 @@
             <p>aerobic activity or 75 minutes of vigorous aerobic activity a week, or a combination of moderate and vigorous activity.</p>
 
 
+            <br>
+
+
+            <h3>Strength Training</h3>
+
+            <p>Strength training is another key part of a fitness training plan. Muscular fitness can help you increase bone strength</p>
+            <p>and muscle fitness. And it can help you stay at a healthy weight or lose weight. It also can improve your skills in doing everyday activities.</p>
+            <p>Aim to do strength training of all the major muscle groups at least twice a week.</p>
+
+            <br>
+
+            <h3>Core Exercises</h3>
+
+            <p>The muscles in the stomach area, also called abdomen, lower back and pelvis are known as the core muscles.</p>
+            <p>Core muscles help protect the back and connect upper and lower body movements.</p>
+            <p>Core strength is a key part of a well-rounded fitness training program.</p>
+            <p>A core exercise is any exercise that uses the trunk of the body without support.</p>
+            <p>Some core exercises are bridges, planks, situps and fitness ball exercises.</p>
+
+
+            <br>
+
+
+            <h3>Flexibility and Stretching</h3>
+
+            <p>Aim to have stretching and flexibility activities in a fitness plan. Stretching exercises can help increase flexibility.</p>
+            <p>Being more flexible can make it easier for you to do many everyday activities.</p>
+            <p>Stretching can also improve the range of motion of the joints. And stretching may help with better posture.</p>
+            <p>Regular stretching can even help lessen stress and tension.</p>
+
+
+
     </body>
 
     </div>
