--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -34,8 +34,10 @@
         <p>Starchy carbohydrates should make up just over a third of the food you eat. They include potatoes, bread, rice, pasta and cereals.</p>
         <p>Choose higher fibre or wholegrain varieties, such as wholewheat pasta, brown rice or potatoes with their skins on.</p>
         <p>They contain more fibre than white or refined starchy carbohydrates and can help you feel full for longer.</p>
-        <p>Try to include at least 1 starchy food with each main meal. Some people think starchy foods are fattening, but gram for gram the carbohydrate they contain provides fewer than half the calories of fat.</p>
-        <p>Keep an eye on the fats you add when you're cooking or serving these types of foods because that's what increases the calorie content - for example, oil on chips, butter on bread and creamy sauces on pasta.</p>
+        <p>Try to include at least 1 starchy food with each main meal. Some people think starchy foods are fattening,
+        <p>but gram for gram the carbohydrate they contain provides fewer than half the calories of fat.</p>
+        <p>Keep an eye on the fats you add when you're cooking or serving these types of foods because that's what increases the calorie content
+        <p>- for example, oil on chips, butter on bread and creamy sauces on pasta.</p>
 
         <br>
 
