--- a/templates/maincontent.html
+++ b/templates/maincontent.html
@@ -46,7 +46,8 @@
         <p>It's recommended that you eat at least 5 portions of a variety of fruit and veg every day. They can be fresh, frozen, canned, dried or juiced.</p>
         <p>Getting your 5 A Day is easier than it sounds. Why not chop a banana over your breakfast cereal, or swap your usual mid-morning snack for a piece of fresh fruit?</p>
         <p>A portion of fresh, canned or frozen fruit and vegetables is 80g. A portion of dried fruit (which should be kept to mealtimes) is 30g.</p>
-        <p>A 150ml glass of fruit juice, vegetable juice or smoothie also counts as 1 portion, but limit the amount you have to no more than 1 glass a day as these drinks are sugary and can damage your teeth.</p>
+        <p>A 150ml glass of fruit juice, vegetable juice or smoothie also counts as 1 portion,
+        <p>but limit the amount you have to no more than 1 glass a day as these drinks are sugary and can damage your teeth.</p>
 
         <br>
 
