--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -4,13 +4,13 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Failure</title>
+        <title>Accessibility</title>
 
         <link rel="stylesheet" href="/static/styles.css">
 
     </head>
 
-    <body class="screen-center" style="background-color: rgb(187, 187, 187);">
+    <body class="accessibility" style="background-color: rgb(187, 187, 187);">
     
 
         <h2>Ajust Your Zoom</h2> 
@@ -18,11 +18,9 @@
         <p></p>
         <p></p>
 
-        <!--Need a slider that changes the zoom of the page here-->
+       <p>-<input type="range" aria-valuemin="0" aria-valuemax="100">+</p>
 
-        <p></p>
-        <p></p>
-        <p></p>
+        <br>
         
 
         <h2>Choose Your Colour Scheme</h2>
