--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -66,7 +66,7 @@
     name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-    <button style="font-size: 30px;" type="submit">Go Back</button>
+    <button style="font-size: 30px;" type="submit" onclick="alert('Uncomfirmed Changes Will Not Be Saved!')">Go Back</button>
 
     </form>
 
