added Online Store route and html

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,19 @@
 
         </form>
 
-
         <form
         action="/contactus"> <!--This will take the user ot the Contact Us page-->
         <button class="homebutton" style="font-size: 30px;" type="submit">Contact Us</button>    
     
         </form>
+
+        
+        <form
+        action="/store"> <!--This will take the user to the Online Store -->
+        <button class="homebutton" style="font-size: 30px;" type="submit">Online Store</button>
+    
+        </form>
+
         </div>
 
 
