fixed radio input for accessibility and added styles

--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -31,16 +31,16 @@
         name="colour"><!--Used to gather an input and change the colour scheme-->
     
         <h3>Orginal</h3>
-        <input type="radio" value="Original" name="Original">
+        <input type="radio" value="Original" name="scheme" class="scheme">
 
 
         <h3>Dark</h3>
-        <input type="radio" value="Dark" name="Dark">
+        <input type="radio" value="Dark" name="scheme" class="scheme">
 
 
 
         <h3>Bright</h3>
-        <input type="radio" value="Bright" name="Bright">
+        <input type="radio" value="Bright" name="scheme" class="scheme">
 
 
         <p></p>
@@ -48,7 +48,7 @@
         <p></p>
 
         
-        <button type="submit">Confirm Choice</button>
+        <button type="submit" class="scheme button">Confirm Choice</button>
     
     
         </form>
@@ -66,7 +66,7 @@
     name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-    <button style="font-size: 30px;" type="submit" onclick="alert('Uncomfirmed Changes Will Not Be Saved!')">Go Back</button>
+    <button class="scheme button" type="submit" onclick="alert('Uncomfirmed Changes Will Not Be Saved!')">Go Back</button>
 
     </form>
 
