--- a/static/styles.css
+++ b/static/styles.css
@@ -105,3 +105,22 @@ input {
     align-items: center;
     text-align: center;
 }
+
+.scheme {
+    height: 20px;
+    width: 20px;
+}
+
+.scheme button {
+    height: 10px;
+    width: 30px;
+    border: 0;
+    border-radius: 10px;
+    padding: 10px 20px;;
+    color: black;
+    border-radius: 10px;
+    cursor: pointer;
+    bottom: 20px;
+    font-size: 45px;
+    position: absolute;
+}
