--- a/templates/accessibility.html
+++ b/templates/accessibility.html
@@ -46,9 +46,10 @@
         <p></p>
         <p></p>
         <p></p>
+        <br>
 
         
-        <button type="submit" class="scheme button">Confirm Choice</button>
+        <button type="submit" class="scheme-button">Confirm Choice</button>
     
     
         </form>
@@ -66,7 +67,7 @@
     name="logout"> <!--This is a form that is used to log out a user, as well as clearing session variables-->
 
 
-    <button class="scheme button" type="submit" onclick="alert('Uncomfirmed Changes Will Not Be Saved!')">Go Back</button>
+    <button class="scheme-button" type="submit" onclick="alert('Uncomfirmed Changes Will Not Be Saved!')">Go Back</button>
 
     </form>
 
