--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,16 @@
         action="/accessibility"> <!--This is a form used to take the user to the accessibility page-->
     
             <button type="submit">Accessibility</button>
+
+        </form>
         
+
+        <form
+        action="/classes"> <!--This is a form used to take the user to the classes/schedule page-->
+    
+            <button class="class-button" type="submit">Classes/Schedule</button>
+
+        </form>
 
 </body>
 
