fixed background image size

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/styles.css">
 </head>
 
-<body class="screen-center" style="background-image: url(/static/background.jpg); background-repeat:no-repeat; background-size: contain; background-color: rgb(187, 187, 187); font-size: 50px;">
+<body class="screen-center" style="background-image: url(/static/background.jpg); background-repeat:no-repeat; background-size: cover; font-size: 50px;">
 
     <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: black;">Home Page</h1>
 
