--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 <body class="screen-center" style="background-image: url(/static/background.jpg); background-repeat:no-repeat; background-size: cover; font-size: 50px;">
 
-    <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: black;">Navigation Menu</h1>
+    <h1 style="text-decoration: solid; color:white; font-size: 100px; background-color: grey; border: 0px; border-radius: 10px;">Navigation Menu</h1>
 
 
     <div style="display: flex;">
@@ -48,6 +48,7 @@
             <!--Used to collect a password-->
         
             <button class="homebutton" type="submit">Login</button>
+
         </form>
 
 
@@ -67,17 +68,16 @@
         </div>
 
 
-        <div class="register">
+        <div>
 
-            <p>Don't have an account?  Register now!  </p>
+            <p class="register">Don't have an account?  Register now! ➔</p>
         
             
             <form action="/sign-in" name="register">
     
                 <button class="register-button" type="submit">Register</button>
+
             </form>
-
-
 
         </div>
 
